WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171598
REGRESSION(
r216096
): [GTK] Test accessibility/gtk/menu-list-unfocused-notifications.html is failing since
r216096
https://bugs.webkit.org/show_bug.cgi?id=171598
Summary
REGRESSION(r216096): [GTK] Test accessibility/gtk/menu-list-unfocused-notific...
Carlos Garcia Campos
Reported
2017-05-03 04:05:31 PDT
--- /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/accessibility/gtk/menu-list-unfocused-notifications-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/accessibility/gtk/menu-list-unfocused-notifications-actual.txt @@ -9,7 +9,8 @@ Focused element is: AXRole: AXButton Changing selected item in non-focused combobox. -AXSelectedChildrenChanged: AXRole: AXComboBox +AXChildrenAdded: AXRole: AXSection +AXChildrenAdded: AXRole: AXComboBox Focused element is: AXRole: AXButton Changing selected item in non-focused combobox.
Attachments
Patch
(7.58 KB, patch)
2022-03-01 03:22 PST
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-05-03 04:06:39 PDT
The test added in
r216096
is a different one, this one passed before.
Carlos Garcia Campos
Comment 2
2017-05-03 04:07:18 PDT
So, maybe it just needs a rebase, Joanie?
Joanmarie Diggs
Comment 3
2017-05-03 04:27:35 PDT
From just glancing at the output, we lost a selection-changed event. That said, in looking into other issues related to ARIA 1.1, I realized that our accessibility selection-notification code needs to be burned to the ground so that a correct implementation can rise from its ashes. That's on my TODO list after I finish the ARIA 1.1 low-hanging fruit. (i.e. later this week) So if you want to skip this one, go for it. Thanks for checking!!
Michael Catanzaro
Comment 4
2017-05-03 09:43:42 PDT
We should generally only skip individual tests if they are breaking other tests.
Carlos Garcia Campos
Comment 5
2022-03-01 03:22:21 PST
Created
attachment 453483
[details]
Patch
Carlos Garcia Campos
Comment 6
2022-03-02 00:51:03 PST
Committed
r290724
(
247971@trunk
): <
https://commits.webkit.org/247971@trunk
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug