REGRESSION(r216096): [GTK] Test accessibility/gtk/menu-list-unfocused-notifications.html is failing since r216096 https://bugs.webkit.org/show_bug.cgi?id=171598

Reviewed by Adrian Perez de Castro.

Source/WebCore:

Enable accessibility when a WTR observer is added.

* accessibility/atspi/AccessibilityAtspi.cpp:
(WebCore::AccessibilityAtspi::addNotificationObserver):

LayoutTests:

Since r216096 the notification for menu list changes is deffered, so we need to wait one run loop cycle to get
the notifications. Also update the test to ignore notifications that are not interesting like AXLoadComplete and
AXElementBusyChanged, and update expectations for the new behavior with ATSPI where the notification is emitted
on the menu and not the combo.

* accessibility/gtk/menu-list-unfocused-notifications-expected.txt:
* accessibility/gtk/menu-list-unfocused-notifications.html:
* platform/gtk/TestExpectations:


Canonical link: https://commits.webkit.org/247971@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290724 268f45cc-cd09-0410-ab3c-d52691b4dbfc